projects/examples/source/09.05.cpp
///////////////////////////////////////////////////

// chapter : Memory Management

///////////////////////////////////////////////////

// section : Resource Handlers

///////////////////////////////////////////////////

// content : Pointer std::weak_ptr
//
// content : Strong and Weak References

///////////////////////////////////////////////////

#include <cassert>
#include <memory>

///////////////////////////////////////////////////

int main()
{
    auto x = std::make_shared < int > (1);

//  -----------------------------------------------

	std::weak_ptr < int > y = x;

//  -----------------------------------------------

	assert(x.use_count() == 1 && *x == 1);

//	assert(y.use_count() == 1 && *y == 1); // error

//  -----------------------------------------------

	assert(y.use_count() == 1 && *y.lock() == 1);

//  -----------------------------------------------

	x.reset();

//  -----------------------------------------------
		
	assert(x.use_count() == 0);

	assert(y.use_count() == 0);
}

///////////////////////////////////////////////////